[package]
name = "joinable"
version = "0.1.0"
authors = ["Joinemm <joonas@rautiola.co>"]
edition = "2018"


[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
warp = { version = "0.2.3", features=["tls"] }
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "=0.3.5", default-features = false }
bytes = "0.5.6"
itertools = "0.10.0"
mime-sniffer = "0.1.2"
config = "0.10.1"
random-fast-rng = "0.1.1"