[package]
name = "joinable"
version = "0.1.0"
authors = ["Joinemm <joonas@rautiola.co>"]
edition = "2018"


[dependencies]
tokio = { version = "1", features = ["full"]}
warp = { version = "0.3", features=["tls"] }
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1"
itertools = "0.10"
mime-sniffer = "0.1.2"
config = "0.10.1"
random-fast-rng = "0.1.1"
serde = { version = "1.0.123", features = ["derive"] }
sqlx = {version = "0.5.1", features = [ "runtime-tokio-rustls", "macros", "mysql"] }